--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,3 +1,12 @@
+^tic\.R$
+^appveyor\.yml$
+.ignore
+.editorconfig
+.gitignore
 ^\.travis\.yml$
 ^.*\.Rproj$
 ^\.Rproj\.user$
+^man-roxygen$
+^attic$
+^docs$
+^pkgdown$
