--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,8 +7,8 @@ Authors@R:
              role = c("cre", "aut"),
              email = "michellang@gmail.com",
              comment = c(ORCID = "0000-0001-9754-0393")))
-Description: Extends the mlr3 package with a data backend to transparently work with data bases.
-    Internally relies on the abstraction of `dbplyr`.
+Description: Extends the mlr3 package with a data backend to transparently work
+    with data bases. Internally relies on the abstraction of `dbplyr`.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -23,9 +23,11 @@ Imports:
     data.table,
     dplyr,
     mlr3
-Suggests: 
+Suggests:
     DBI,
     RSQLite,
     dbplyr,
     tibble,
     testthat
+URL: https://github.com/mlr-org/mlr3db
+BugReports: https://github.com/mlr-org/mlr3db/issues
