--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,9 +27,14 @@ Suggests:
     DBI,
     RSQLite,
     dbplyr,
-    tibble,
-    testthat
+    knitr,
+    nycflights13,
+    rmarkdown,
+    rpart,
+    testthat,
+    tibble
 Remotes:
     mlr-org/mlr3
 URL: https://github.com/mlr-org/mlr3db
 BugReports: https://github.com/mlr-org/mlr3db/issues
+VignetteBuilder: knitr
