--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,13 @@ export(DataBackendDplyr)
 import(checkmate)
 import(data.table)
 importFrom(R6,R6Class)
+importFrom(dplyr,all_vars)
+importFrom(dplyr,collect)
+importFrom(dplyr,distinct)
+importFrom(dplyr,filter_at)
+importFrom(dplyr,is.tbl)
+importFrom(dplyr,select_at)
+importFrom(dplyr,tally)
 importFrom(mlr3,DataBackend)
 importFrom(mlr3,as_data_backend)
 importFrom(stats,setNames)
