--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,10 @@ importFrom(dplyr,all_vars)
 importFrom(dplyr,collect)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter_at)
+importFrom(dplyr,funs)
 importFrom(dplyr,is.tbl)
 importFrom(dplyr,select_at)
+importFrom(dplyr,summarize_at)
 importFrom(dplyr,tally)
 importFrom(mlr3,DataBackend)
 importFrom(mlr3,as_data_backend)
