--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(DataBackendDplyr)
 import(checkmate)
 import(data.table)
 importFrom(R6,R6Class)
+importFrom(digest,digest)
 importFrom(dplyr,all_vars)
 importFrom(dplyr,collect)
 importFrom(dplyr,distinct)
