--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ S3method(as_sqlite,data.frame)
 export(DataBackendDplyr)
 export(as_sqlite)
 import(checkmate)
-import(data.table, except = transpose)
+import(data.table)
 importFrom(R6,R6Class)
 importFrom(digest,digest)
 importFrom(dplyr,all_vars)
