--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mlr3db
 Title: Data Base Backend for mlr3
-Version: 0.0.0.9000
+Version: 0.1.0
 Authors@R:
     c(person(given = "Michel",
              family = "Lang",
@@ -9,7 +9,7 @@ Authors@R:
              comment = c(ORCID = "0000-0001-9754-0393")))
 Description: Extends the mlr3 package with a data backend to transparently work
     with data bases. Internally relies on the abstraction of `dbplyr`.
-License: MIT + file LICENSE
+License: LGPL-3
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
@@ -17,12 +17,12 @@ RoxygenNote: 6.1.1
 Depends:
     R (>= 3.1.0)
 Imports:
-    digest,
-    R6,
     checkmate,
     data.table,
+    digest,
     dplyr,
     mlr3
+    R6,
 Suggests:
     DBI,
     RSQLite,
@@ -32,5 +32,5 @@ Suggests:
     tibble
 Remotes:
     mlr-org/mlr3
-URL: https://github.com/mlr-org/mlr3db
+URL: https:///mlr3db.mlr-org.com
 BugReports: https://github.com/mlr-org/mlr3db/issues
