--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -22,7 +22,7 @@ navbar:
 
   right:
   - icon: fa-github fa-lg
-    href: https://github.com/mlr-org/mlr3tuning
+    href: https://github.com/mlr-org/mlr3db
   - icon: fa-slack
     href: https://mlr-org.slack.com
   - icon: fa-stack-overflow
