--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: mlr3db
-Title: Data Base Backend for mlr3
+Title: Data Base Backend for 'mlr3'
 Version: 0.1.0
 Authors@R:
     person(given = "Michel",
@@ -7,9 +7,9 @@ Authors@R:
            role = c("cre", "aut"),
            email = "michellang@gmail.com",
            comment = c(ORCID = "0000-0001-9754-0393"))
-Description: Extends the mlr3 package with a data backend to
+Description: Extends the 'mlr3' package with a data backend to
     transparently work with data bases. Internally relies on the
-    abstraction of `dbplyr`.
+    abstraction of the 'dbplyr' package.
 License: LGPL-3
 URL: https:///mlr3db.mlr-org.com
 BugReports: https://github.com/mlr-org/mlr3db/issues
@@ -29,8 +29,6 @@ Suggests:
     RSQLite,
     testthat,
     tibble
-Remotes:
-    mlr-org/mlr3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.1
