cleanup for release

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mlr3db
 Title: Data Base Backend for 'mlr3'
-Version: 0.1.0
+Version: 0.1.1
 Authors@R:
     person(given = "Michel",
            family = "Lang",
@@ -9,7 +9,8 @@ Authors@R:
            comment = c(ORCID = "0000-0001-9754-0393"))
 Description: Extends the 'mlr3' package with a backend to
     transparently work with data bases. Internally relies on the
-    abstraction of `dbplyr` to interact with one of the many supported DBMS.
+    abstraction of package 'dbplyr' to interact with one of the many
+    supported DBMS.
 License: LGPL-3
 URL: https:///mlr3db.mlr-org.com
 BugReports: https://github.com/mlr-org/mlr3db/issues
@@ -20,7 +21,7 @@ Imports:
     data.table,
     digest,
     dplyr,
-    mlr3,
+    mlr3 (>= 0.1.1),
     R6
 Suggests:
     DBI,
