--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Authors@R:
 Description: Extends the 'mlr3' package with a backend to
     transparently work with data bases. Internally relies on the
     abstraction of package 'dbplyr' to interact with one of the many
-    supported DBMS.
+    supported data base management systems (DBMS).
 License: LGPL-3
 URL: https:///mlr3db.mlr-org.com
 BugReports: https://github.com/mlr-org/mlr3db/issues
