--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mlr3db
 Title: Data Base Backend for 'mlr3'
-Version: 0.1.1-9000
+Version: 0.1.2
 Authors@R:
     person(given = "Michel",
            family = "Lang",
