--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mlr3db
 Title: Data Base Backend for 'mlr3'
-Version: 0.1.2
+Version: 0.1.2-9000
 Authors@R:
     person(given = "Michel",
            family = "Lang",
