--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,5 +32,5 @@ Suggests:
     testthat,
     tibble
 Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 6.1.1
+Roxygen: list(markdown = TRUE, r6 = FALSE)
+RoxygenNote: 7.0.0
