--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ BugReports: https://github.com/mlr-org/mlr3db/issues
 Depends:
     R (>= 3.1.0)
 Imports:
+    backports,
     checkmate,
     data.table,
     digest,
