--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,5 +36,5 @@ Suggests:
     testthat,
     tibble
 Encoding: UTF-8
-Roxygen: list(markdown = TRUE, r6 = FALSE)
+Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.0.2
