--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -4,6 +4,9 @@ template:
   package: mlr3pkgdowntemplate
   params:
     bootswatch: journal
+    docsearch:
+      api_key: f1cf73c2e68173ef3c0ac36d6ac6f448
+      index_name: mlr3db
   default_assets: false
 
 development:
