add show_query method (fixes #4)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(DataBackendDplyr)
 export(DataBackendDuckDB)
 export(as_duckdb_backend)
 export(as_sqlite_backend)
+if (getRversion() >= "3.6.0") S3method(dplyr::show_query, DataBackendDplyr)
 import(checkmate)
 import(data.table)
 importFrom(R6,R6Class)
