--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mlr3db
 Title: Data Base Backend for 'mlr3'
-Version: 0.4.2
+Version: 0.4.2-9000
 Authors@R:
     person(given = "Michel",
            family = "Lang",
@@ -8,10 +8,10 @@ Authors@R:
            email = "michellang@gmail.com",
            comment = c(ORCID = "0000-0001-9754-0393"))
 Description: Extends the 'mlr3' package with a backend to
-    transparently work with databases. Includes two extra backends:
-    One relies on relies on the abstraction of package 'dbplyr' to interact with
-    one of the many supported database management systems (DBMS). The other one
-    is specialized for package 'duckdb'.
+    transparently work with databases and parquet files. Includes two
+    backends: One relies on relies on the abstraction of package 'dbplyr' to
+    interact with one of the many supported database management systems (DBMS).
+    The other interfaces package 'duckdb'.
 License: LGPL-3
 URL: https:///mlr3db.mlr-org.com,
     https://github.com/mlr-org/mlr3db
@@ -25,6 +25,7 @@ Imports:
     checkmate,
     data.table,
     mlr3misc (>= 0.10.0),
+Remotes: mlr-org/mlr3 (>= 0.13.3-9000)
 Suggests:
     DBI,
     RSQLite,
