--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,10 +8,11 @@ Authors@R:
            email = "michellang@gmail.com",
            comment = c(ORCID = "0000-0001-9754-0393"))
 Description: Extends the 'mlr3' package with a backend to
-    transparently work with databases and parquet files. Includes two
-    backends: One relies on relies on the abstraction of package 'dbplyr' to
-    interact with one of the many supported database management systems (DBMS).
-    The other interfaces package 'duckdb'.
+    transparently work with databases such as 'SQLite', 'DuckDB', 'MySQL',
+    'MariaDB', or 'PostgreSQL'. The package provides two additional backends:
+    'DataBackendDplyr' relies on the abstraction of package 'dbplyr' to
+    interact with most DBMS. 'DataBackendDuckDB' operates on DuckDB data bases
+    and also on Apache Parquet files.
 License: LGPL-3
 URL: https:///mlr3db.mlr-org.com,
     https://github.com/mlr-org/mlr3db
