fix quote in desc

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Description: Extends the 'mlr3' package with a backend to
     transparently work with databases such as 'SQLite', 'DuckDB', 'MySQL',
     'MariaDB', or 'PostgreSQL'. The package provides two additional backends:
     'DataBackendDplyr' relies on the abstraction of package 'dbplyr' to
-    interact with most DBMS. 'DataBackendDuckDB' operates on `DuckDB` data bases
+    interact with most DBMS. 'DataBackendDuckDB' operates on 'DuckDB' data bases
     and also on Apache Parquet files.
 License: LGPL-3
 URL: https:///mlr3db.mlr-org.com,
