--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Authors@R:
            comment = c(ORCID = "0000-0001-9754-0393")),
       person(given = "Lona",
            family = "Koers",
-           role = c("ctb"),
+           role = c("aut"),
            email = "lona.koers@gmail.com")
     )
 Description: Extends the 'mlr3' package with a backend to
@@ -50,4 +50,4 @@ Remotes:
 Encoding: UTF-8
 Config/testthat/edition: 3
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.2
