--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,9 +43,11 @@ Suggests:
     future.callr,
     lgr,
     polars,
+    remotes,
     testthat (>= 3.0.0),
     tibble
-Additional_repositories: https://community.r-multiverse.org
+Remotes:
+    pola-rs/r-polars
 Encoding: UTF-8
 Config/testthat/edition: 3
 Roxygen: list(markdown = TRUE)
