--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -46,8 +46,7 @@ Suggests:
     remotes,
     testthat (>= 3.0.0),
     tibble
-Remotes:
-    pola-rs/r-polars
+Additional_repositories: https://community.r-multiverse.org
 Encoding: UTF-8
 Config/testthat/edition: 3
 Roxygen: list(markdown = TRUE)
