--- a/.github/workflows/r-cmd-check.yml
+++ b/.github/workflows/r-cmd-check.yml
@@ -33,6 +33,7 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.config.r }}
+          extra-repositories: 'https://community.r-multiverse.org'
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
